Fix navbar align and height

--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -84,7 +84,7 @@
     }
 
     .navbar_activate{
-        height: calc(60px + 50px + (63px * 4));
+        height: calc(60px + (63px * 4));
         background: #000000;
 
         .mobile_menu{
@@ -128,7 +128,8 @@
         }
 
         .link_menu{
-            height: 183px;
+            width: 100%;
+            margin: 0;
             display: flex;
             flex-direction: column;
 
@@ -138,7 +139,7 @@
                 margin: 0;
                 cursor: pointer;
                 padding: 20px 0;
-                width: 100vw;
+                width: 100%;
             }
         }
 
